--- a/FTWeb/ViewV5/CSS/index.css
+++ b/FTWeb/ViewV5/CSS/index.css
@@ -608,4 +608,75 @@ button.toast-close-button{padding:0;cursor:pointer;background:0 0;border:0;-webk
 
 
 
-    
+
+/*替换bootstrap*/
+.progress {height: 5px;border-radius:0; box-shadow:none;}
+.progress-bar {   -webkit-box-shadow:none;box-shadow:none;}
+
+/*课程列表公用样式*/
+.cont-panel{position: relative;margin-top: 40px;margin-bottom: 40px;}
+.cont-panel .left{margin-right: 380px;}
+.cont-panel .right{width: 360px;height: 200px;position: absolute;right: 0;background: #4658ad;}
+.panel-all{background: #fff;border: 1px solid #dcdcdc;min-height: 200px;}
+.panel-title{font-size: 20px;font-weight: normal;}
+.panel-title.panel-title2{font-size: 16px;}
+.panel-title a{font-size: 14px;color:#999;}
+/*课程列表样式*/
+.course li{float: left;width: 33.33%;margin-bottom: 15px;cursor: pointer;}
+.course .course-list{margin:0 15px;border-color: #f7f7f7}
+.course li:hover .course-teacher{height: 36px;}
+.course li:hover>div{box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2)}
+.course-img{position: relative;}
+.course-img img{height: 180px;width: 100%}
+
+.course-img .default-text{position: absolute;left: 0;top: 0;height: 180px;display: table;font-size: 25px;padding: 0 15%;}
+.course-img .default-text p{display: table-cell;vertical-align: middle;}
+.course-img .course-teacher{position: absolute;bottom: 0;left:0;background: rgba(0,0,0,.5);width: 100%;color: #fff;height: 0px;line-height: 36px;transition:all .5s;text-indent: 1em;}
+.course-cont h3{color: #333;font-size: 18px;font-weight: 700;line-height: 36px;}
+.course-cont .course-item span{border: 1px solid #d6d6d6;height: 28px;line-height: 26px;border-radius:28px;display: inline-block;padding: 0 20px;}
+/*tab切换样式*/
+.tab-box{background: #f5f5f7;height: 50px;border-bottom: 1px solid #dcdcdc;}
+.tab-box li{/*width: 86px;*/float: left;line-height: 48px;text-align: center;}
+.tab-box li a{width: 100%;height: 100%;display: inline-block;border-top: 2px solid transparent;border-left: 1px solid transparent;border-right: 1px solid transparent;padding: 0 25px;}
+.tab-box li.active a{background: #fff;border-top-color: #42a0f8;border-right-color: #dcdcdc;border-left-color: #dcdcdc;color: #222;}
+.tab-box li.active a:first-child{border-left-color:transparent;}
+.tab-box.tab-box-left li.active a:first-child{border-left-color: #dcdcdc;}
+
+
+
+/*课程详细页面*/
+.detail-box{padding: 30px;}
+.detail-box .course-img{height: 226px;width: 365px;}
+.detail-box .course-img img{height: 226px;}
+.detail-box .course-img .default-text{height: 226px;}
+.detail-title{background: #f5f5f8;padding: 30px;position: relative}
+.kc-detial {margin-left: 30px;/*position: relative;*/}
+.kc-detial > div {color: #999;line-height: 30px;font-size: 16px;}
+.detail-text{padding: 30px 40px;}
+.detail-list{margin-left: 40px;margin-bottom: 20px;}
+.detail-list .detail-js{line-height: 30px;font-size: 16px;}
+.detail-kc{width: 100%;height: 46px;background: #f5f5f7;border: 1px solid #dcdcdc;border-radius:2px;margin-bottom: 20px;line-height: 46px;cursor: pointer;}
+.detail-kc-bt{display: inline-block;width: 100px;/*height: 100%;*/background: #42a0f8;color: #fff;line-height:45px;text-align: center;font-size: 19px;/*font-weight: 700;*/opacity: .5}
+.detail-kc:hover .detail-kc-bt{opacity: 1}
+
+.course_nr{height:200px;  background:url(/View/images/icon-4.png) repeat-x center; }
+.course_nr li{ float:left;width:140px; text-align:center; position:relative;margin-right: 40px;height: 200px;cursor: pointer;}
+.cursor-pic {position: absolute;width: 100%;top: 60px;}
+.white{background: #fff;display: inline-block;}
+.cursor-pic img{opacity: .5}
+.course-text{position: absolute;width: 100%;bottom: 5px;left: 0;top:auto;right: auto;}
+.course_nr li:nth-child(2n) .cursor-pic{top:50px;}
+.course_nr li:nth-child(2n) .cursor-pic .white{transform:rotate(180deg);}
+.course_nr li:nth-child(2n) .course-text{top:5px;bottom: auto;}
+.course_nr li:nth-child(2n) .fs{line-height: 105px;}
+.course_nr li:hover .cursor-pic img{opacity: 1}
+.fs{position: absolute;width: 100%;height: 100%;line-height: 75px;text-align: center;left: 0;top: 0;color: #fff;font-size:18px;}
+.course-text .bs{display:inline-block;padding:1px 3px;background:#FF6060;color:#fff;border-radius:5px;font-size:12px;}
+.course-text .bs.gree{background:#79BE5B}
+
+.btn-kx{    position: absolute;
+    right: 5%;
+    top: 80px;}
+.btn-kx a{width:160px;height:50px;border-radius:1px;font-size:18px}
+
+
