统一PC端引用的阿里样式文件 解决了IPHONE不能正常上传图片的Bug 流程管理里加了抄送管理,可以在流程过程更新抄送人

--- a/QJY.WEB/ViewV5/CSS/default.css
+++ b/QJY.WEB/ViewV5/CSS/default.css
@@ -1,6 +1,6 @@
 /*html{ overflow-x:hidden; background:#fff;}*/
 /*html{min-width: 1230px;}*/
-@import url(http://at.alicdn.com/t/font_1474618603_1356041.css);
+/*@import url(http://at.alicdn.com/t/font_1474618603_1356041.css);*/
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0;}
 *{margin:0;padding: 0}
 /*body, button, input, select, textarea { font:14px/1.5 "\5FAE\8F6F\96C5\9ED1","Microsoft Yahei","Hiragino Sans GB",tahoma,arial,"\5B8B\4F53";font-family: "黑体","微软雅黑", 'Microsoft Yahei', 'Hiragino Sans GB', tahoma, arial, "宋体"; }*/
